fix: disable hover summary on mobile device

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -369,3 +369,9 @@ body.local-server {
 .hover-summary-content *:last-child {
     margin-bottom: 0;
 }
+
+@media (max-width: 750px) {
+    #HoverSummary {
+        display: none;
+    }
+}
